# ChangeLog for dev-java/hibernate-annotations
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Updated dep on javassist to reflect it's new slot, this version should be
  removed. Uses stuff that is not included in deps

  20 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Updated dep on javassist to reflect it's new slot

  11 Feb 2007; kiorky <kiorky@cryptelium.net>
  hibernate-annotations-3.2.0.ebuild, metadata.xml:
  Corrected dependencies
  Fixed inherit
  Fixed src_unpack
  Fixed Copyright Dates/License
  Filled #166441
