@@ -1,44 +1,11 @@
 DIST hibernate-3.0.5.tar.gz 16097031 RMD160 720e9f16b8caea3245a9b82075a1d0957e790d5a SHA1 49897f3c4cccf0fe9fbe7903a509a0ccc996958b SHA256 6971edbbb7bda9e0d2b96a0a652c9040ccde9f17dfae0fe72cc017c3b29196fa
 DIST hibernate-3.1.2.tar.gz 18498739 RMD160 086c7dbf9b3cc39e137b72af9733c2db83adf1b6 SHA1 800bacdf552c6db6b3351ed05b3f8fe0d6fa0259 SHA256 1ff054a9208037ef7f7cb85753fde8431ccdd59789723c4dca52861b093b185b
-DIST hibernate-3.2.0.cr4.tar.gz 22728117 RMD160 7191bb2715f47e8ef2276c1907ec5a8e503c8926 SHA1 5050ddcaa1a9ff93f935d09057eca01daab1abf5 SHA256 21d7f440d0842209b5015ea1be04f0afa51725ba9235d0b9ea209c9f16c6ae58
 DIST hibernate-3.2.0.ga.tar.gz 19744419 RMD160 2ff9d9eea209ec5247854a28050a2104ebbec048 SHA1 3ad8f6ead464e9d8d5471631a2afccc83c8dcf14 SHA256 e242eb6b243e7b0fac132f37f4e29bf06ec87c37be5a80a0849709a6cb89b03f
 DIST hibernate-annotations-3.0beta2.tar.gz 1136471 RMD160 fa6da8e778cd0592101853f697eda1f46eb9dda0 SHA1 6dbe7dddca681afa13c5bbea4a973b4ddeb06e8c SHA256 c2629f0dfad3e0af51a00609170a07e644acbd1cf5bb8a594205a1ec98548326
 DIST hibernate-annotations-3.1beta8.tar.gz 1182514 RMD160 ce79d1b6e1d68c19e9dc60af34ea85dcb9df12d6 SHA1 47984576527f45fbea4179524ee79f6db483cd1f SHA256 48434ea4f1f537fce7cff2fc70fd8ae18c7eaf86893a4a3f48b091ab1278bbd0
-DIST hibernate-annotations-3.2.0.CR2.tar.gz 1958994 RMD160 b5b37900986f464975f07e46671269b16f68e7b9 SHA1 09e52e9c75bc0cdc32f380b5a1e600f0eaef2eb9 SHA256 cde40a61f9309f7012f845b5cb68d3f279d12f80b880790a9e1138c7a37c1572
 DIST hibernate-annotations-3.2.0.GA.tar.gz 2075220 RMD160 9615522578ec7a495e7255be27634c7ca6e68c68 SHA1 9c57d3df6d7d98f0ac94398a21ceb6f004b4f0da SHA256 7ac81b03c4d4623cb7c883a3f85a47078edb261cde3fee2bfbc4fcf70a4e9bc8
 EBUILD hibernate-annotations-3.0_beta2.ebuild 1698 RMD160 cf48622388a7d23ea4dc5cbdd1685b4076698e8d SHA1 d00c813a54d1185ca88c13aa04716800c3de34b4 SHA256 6bb8dcc359a48f87a483a4ae70be8a49bb43ea3ea5a8249041c2d8a536848ed8
-MD5 bc1279471e062480bd028aa1c7ecc5a4 hibernate-annotations-3.0_beta2.ebuild 1698
-RMD160 cf48622388a7d23ea4dc5cbdd1685b4076698e8d hibernate-annotations-3.0_beta2.ebuild 1698
-SHA256 6bb8dcc359a48f87a483a4ae70be8a49bb43ea3ea5a8249041c2d8a536848ed8 hibernate-annotations-3.0_beta2.ebuild 1698
 EBUILD hibernate-annotations-3.1_beta8.ebuild 1652 RMD160 6ae401131839a0aa47395c55ae0a5a1296d2e999 SHA1 a9de6f5e332913cf5f997cc65d18cbad9a0ef860 SHA256 4ccbf03f8bb487d66d55edf01162b4811f36865645e931054a8f961945cce9a6
-MD5 0b979179b818e9e96750fd0be6d2c333 hibernate-annotations-3.1_beta8.ebuild 1652
-RMD160 6ae401131839a0aa47395c55ae0a5a1296d2e999 hibernate-annotations-3.1_beta8.ebuild 1652
-SHA256 4ccbf03f8bb487d66d55edf01162b4811f36865645e931054a8f961945cce9a6 hibernate-annotations-3.1_beta8.ebuild 1652
 EBUILD hibernate-annotations-3.2.0.ebuild 2135 RMD160 269f4c5e8a2f94c275aefce52d1546cfbc8cef7f SHA1 0c78c2a44bceb59ed738fc734117877c9d7dfb7b SHA256 5f1f5dca8ce9ab461718b845151af19d2b0c86498cefc914e7e801635cd6f368
-MD5 e407b4c341a0123311eec5148ebb41ce hibernate-annotations-3.2.0.ebuild 2135
-RMD160 269f4c5e8a2f94c275aefce52d1546cfbc8cef7f hibernate-annotations-3.2.0.ebuild 2135
-SHA256 5f1f5dca8ce9ab461718b845151af19d2b0c86498cefc914e7e801635cd6f368 hibernate-annotations-3.2.0.ebuild 2135
-EBUILD hibernate-annotations-3.2.0_rc2.ebuild 1792 RMD160 8433c3ee6f960f036cc4600422f54e053fa3b63c SHA1 0ae2bb74df10fcbd668fce03dd4b2fe3f321b4c3 SHA256 581b8fb44448dbf9dba283eb0889865f7dde04be07cba9cc33558ea01e1181c9
-MD5 29fea3d3a6c3845de11343a53777573d hibernate-annotations-3.2.0_rc2.ebuild 1792
-RMD160 8433c3ee6f960f036cc4600422f54e053fa3b63c hibernate-annotations-3.2.0_rc2.ebuild 1792
-SHA256 581b8fb44448dbf9dba283eb0889865f7dde04be07cba9cc33558ea01e1181c9 hibernate-annotations-3.2.0_rc2.ebuild 1792
-MISC ChangeLog 656 RMD160 8195b02b3c0ac14b95b565f9fa72d978f5512d40 SHA1 a22e58114fba087334199208ee08e47471b50ac3 SHA256 b1a43440a55c5f373015402a257b2ea206799b354a25a988c50fe0225f22b206
-MD5 7bc896d35f6d0d8a6d2e267cf65d14a6 ChangeLog 656
-RMD160 8195b02b3c0ac14b95b565f9fa72d978f5512d40 ChangeLog 656
-SHA256 b1a43440a55c5f373015402a257b2ea206799b354a25a988c50fe0225f22b206 ChangeLog 656
+MISC ChangeLog 775 RMD160 9ee4bfb1d2c07dd34111c0ec691d9ba624798b5a SHA1 3e91dc15d53b8b4e52c17f2e2993398adebb7cf9 SHA256 41dbe629a7aa0cb193588b9cd1375b5a685463ead90be39813200dbca4c9f7fb
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
-RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
-SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
-MD5 ba48ac15c623ca70dd29dc1a323e0e88 files/digest-hibernate-annotations-3.0_beta2 548
-RMD160 ce92a2cb7b1e336ee0a08acf448183fa625156f0 files/digest-hibernate-annotations-3.0_beta2 548
-SHA256 1c49d0bbfae8f9c306560bfb16f29f58131af7b66303745af6f61b142eb0ee77 files/digest-hibernate-annotations-3.0_beta2 548
-MD5 8d94351a23a1774efa5c74589ae10e0a files/digest-hibernate-annotations-3.1_beta8 548
-RMD160 bfe2ddbf94c1b7dc3e0bd6a0c54a698ad2426bb0 files/digest-hibernate-annotations-3.1_beta8 548
-SHA256 cf75ca0b593f3451a34ade99cebe05dd84598e864c97e807187b4eaea2c6092e files/digest-hibernate-annotations-3.1_beta8 548
-MD5 9f85979a0394205856491c8c44e69752 files/digest-hibernate-annotations-3.2.0 557
-RMD160 9eb89e7cb4e0d377a19b627367ecc7cdad563247 files/digest-hibernate-annotations-3.2.0 557
-SHA256 f46320877103a4ddd664cb8bfc8c6b1b0d29dec7a46e7ee0d4ad9c0944e6ff49 files/digest-hibernate-annotations-3.2.0 557
-MD5 7fc301bd10dba96898c9a8c72580434a files/digest-hibernate-annotations-3.2.0_rc2 563
-RMD160 e56a321cfd28046ec2a17b4ba5067a14ec99ff9f files/digest-hibernate-annotations-3.2.0_rc2 563
-SHA256 5d51d3f0fe49db4ab1b65ee8e9a4f219f2e55056b292a7d779dcbec93ea091ff files/digest-hibernate-annotations-3.2.0_rc2 563
