@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Aug 2007; Petteri Räty <betelgeuse@gentoo.org>
+  -hibernate-annotations-3.2.0_rc2.ebuild:
+  Remove old version.
+
   20 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
   Updated dep on javassist to reflect it's new slot, this version should be
   removed. Uses stuff that is not included in deps
